chore: relocate test files and update jest configuration

--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
   },
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/tests"
+    ]
   },
   "prettier": {
     "semi": false,
