--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "mikrus": "bin/mikrus"
   },
   "engines": {
-    "node": ">=18.20.8"
+    "node": ">=20.0.0"
   },
   "scripts": {
     "clean-build": "rimraf -rf ./build",
     "compile": "tsc -p .",
-    "copy-templates": "copyfiles ./src/templates/* ./build/templates",
+    "copy-templates": "cpy ./src/templates/* ./build/templates",
     "build": "yarn clean-build && yarn compile && yarn copy-templates",
     "prepublishOnly": "yarn build",
     "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
@@ -38,7 +38,7 @@
     "@types/node": "^24.3.0",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
-    "copyfiles": "^2.4.1",
+    "cpy-cli": "^6.0.0",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
