--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "copy-templates": "cpy ./src/templates/* ./build/templates",
     "build": "yarn clean-build && yarn compile && yarn copy-templates",
     "prepublishOnly": "yarn build",
-    "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
+    "format": "biome format --write .",
+    "lint": "biome lint .",
+    "check": "biome check .",
+    "check:fix": "biome check --write .",
     "test": "jest",
     "watch": "jest --watch",
     "snapupdate": "jest --updateSnapshot",
@@ -34,18 +37,12 @@
     "gluegun": "^5.2.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.40.0",
-    "@typescript-eslint/parser": "^8.40.0",
     "cpy-cli": "^6.0.0",
-    "eslint": "^9.33.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
     "husky": "^9.1.7",
     "jest": "^30.0.5",
-    "prettier": "^3.6.2",
-    "pretty-quick": "^4.2.2",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.9.2"
@@ -57,13 +54,9 @@
       "<rootDir>/tests"
     ]
   },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true
-  },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "biome check --write --staged"
     }
   }
 }
