--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
     "cpy-cli": "^6.0.0",
-    "husky": "^9.1.7",
     "jest": "^30.0.5",
+    "lefthook": "^1.12.3",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.9.2"
@@ -53,10 +53,5 @@
     "roots": [
       "<rootDir>/tests"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "biome check --write --staged"
-    }
   }
 }
