--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,5 +4,4 @@ pre-commit:
   commands:
     biome:
       glob: "*.{js,ts,json,jsx,tsx}"
-      run: yarn check --write --no-errors-on-unmatched {staged_files}
-      stage_fixed: true
+      run: bun run check --no-errors-on-unmatched {staged_files}
