--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,6 @@
     "declarationDir": "build/types"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "types": ["vitest/globals"]
 }
