--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vitest/ui": "^3.2.4",
     "cpy-cli": "^6.0.0",
     "lefthook": "^1.12.3",
+    "tdd-guard-vitest": "^0.1.3",
     "ts-node": "^10.9.2",
     "typescript": "~5.9.2",
     "vitest": "^3.2.4"
