--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,10 +34,17 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
+      -   name: Check PATH 1.
+          run: echo $PATH
+
+      -   name: Check PATH 2.
+          run: echo $PATH
+          env:
+            PATH: ./node_modules/.bin:$PATH
+
       - name: Run Biome checks
-        env:
-          PATH: $PWD/node_modules/.bin:$PATH
-        run: bun run check
+        run: ./node_modules/.bin/biome check .
+
 
   test:
     name: Test
