--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           bun-version: latest
 
+      - name: What in Path
+        run: ls -al ./node_modules/.bin/
+
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
