ci: bunx @biomejs/biome ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
             ${{ runner.os }}-bun-
 
       - name: Run Biome checks
-        run: npx @biomejs/biome ci
+        run: bunx @biomejs/biome ci
 
 
   test:
