--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-bun-
 
+      - name: Install dependencies
+        run: bun install --frozen-lockfile
+
       - name: Run Biome checks
         run: bunx @biomejs/biome ci
 
@@ -157,6 +160,12 @@ jobs:
         with:
           bun-version: latest
 
+      - name: Install dependencies
+        run: bun install --frozen-lockfile
+
+      - name: Add node_modules/.bin to PATH
+        run: echo "./node_modules/.bin" >> $GITHUB_PATH
+
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
@@ -165,11 +174,11 @@ jobs:
       - name: Make CLI executable
         run: chmod +x bin/mikrus
 
-      - name: Test CLI help command
-        run: ./bin/mikrus --help
+      - name: Test CLI help command (compiled version)
+        run: ./bin/mikrus --compiled-build --help
 
-      - name: Test CLI version command
-        run: ./bin/mikrus --version
+      - name: Test CLI version command (compiled version)
+        run: ./bin/mikrus --compiled-build --version
 
   # Deployment job (only runs on main branch)
   deploy:
