--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,7 +111,16 @@ jobs:
       - name: Build project
         run: bun run build
 
+      - name: Temporarily set package to public for publishing
+        run: |
+          sed -i 's/"private": true/"private": false/' package.json
+
       - name: Publish to NPM
-        run: npm publish
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Revert package.json changes
+        if: always()
+        run: |
+          git checkout -- package.json
