--- a/package.json
+++ b/package.json
@@ -62,10 +62,12 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.2",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.3.0",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "cpy-cli": "^6.0.0",
+    "js-yaml": "^4.1.0",
     "lefthook": "^1.12.3",
     "rimraf": "^6.0.1",
     "tdd-guard-vitest": "^0.1.3",
