docs: improve formatting and fix typos across documentation
- Fix markdown table formatting in .github/SECURITY.md
- Add trailing newlines to configuration files
- Correct typo "Replace with" → "Replace it with" in dependabot.yml
- Standardize formatting across security documentation
- Clean up whitespace and formatting inconsistencies

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,9 +9,9 @@ updates:
       time: "09:00"
     open-pull-requests-limit: 10
     reviewers:
-      - "gander" # Replace with actual GitHub username
+      - "gander" # Replace it with actual GitHub username
     assignees:
-      - "gander" # Replace with actual GitHub username
+      - "gander" # Replace it with actual GitHub username
     commit-message:
       prefix: "chore"
       prefix-development: "chore"
