--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -175,6 +175,7 @@ jobs:
     uses: ./.github/workflows/security-scan.yml
     permissions:
       contents: read
+      security-events: write
 
   # Integration test job that runs the built CLI
   integration-test:
