--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@14818c4695ecc4045f33c9cee9e795a788711ca4 # master
         continue-on-error: true
+        if: env.SNYK_TOKEN != ''
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
@@ -40,7 +41,9 @@ jobs:
 
       - name: Upload Snyk results to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@47b3d888fe66b639e431abf22ebca059152f1eea # v3
-        if: always()
+        if: env.SNYK_TOKEN != '' && always()
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           sarif_file: snyk.sarif
           category: snyk-dependencies
@@ -315,7 +318,7 @@ jobs:
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@47b3d888fe66b639e431abf22ebca059152f1eea # v3
         with:
-          category: '/language:${{matrix.language}}'
+          category: '/language:${{ matrix.language }}'
           upload: true
 
   github-security-advisory:
