fix(ci): resolve unclosed GitHub expression in security scan grep pattern
Fix unclosed ${{ expression in credential validation that was causing
workflow parsing errors. Changed grep pattern from '${{' to '${{.*}}'
to properly match GitHub Actions expressions in bash scripts.

Resolves: Line 207, Col 14 expression parsing error in security-scan.yml

--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -217,7 +217,7 @@ jobs:
             echo "Checking workflow: $workflow"
             
             # Check for hardcoded secrets in workflow files
-            if grep -q -E "(password|token|key|secret).*:" "$workflow" | grep -v '\${{'; then
+            if grep -q -E "(password|token|key|secret).*:" "$workflow" | grep -v '\${{.*}}'; then
               echo "⚠️ Potential hardcoded credential in $workflow"
             fi
             
