feat: install Snyk CLI globally and improve authentication
- Add global npm installation of Snyk CLI for better compatibility
- Improve Snyk authentication by passing token as argument
- Add descriptive comment for better workflow documentation
- Ensures consistent Snyk CLI availability across different environments

--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -31,10 +31,14 @@ jobs:
       - name: Create empty SARIF file
         run: touch ./snyk.sarif
 
+      # 2. Zainstaluj Snyk CLI globalnie
+      - name: Install Snyk CLI
+        run: npm install -g snyk
+
       - name: Authenticate Snyk
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        run: snyk auth
+        run: snyk auth $SNYK_TOKEN
 
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@14818c4695ecc4045f33c9cee9e795a788711ca4 # master
