--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -33,17 +33,17 @@ jobs:
 
       # 2. Zainstaluj Snyk CLI globalnie (tylko jeśli SNYK_TOKEN istnieje)
       - name: Install Snyk CLI
-        if: secrets.SNYK_TOKEN != ''
+        if: secrets.SNYK_TOKEN != null && secrets.SNYK_TOKEN != ''
         run: npm install -g snyk
 
       - name: Authenticate Snyk
-        if: secrets.SNYK_TOKEN != ''
+        if: secrets.SNYK_TOKEN != null && secrets.SNYK_TOKEN != ''
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         run: snyk config set api=$SNYK_TOKEN
 
       - name: Run Snyk to check for vulnerabilities
-        if: secrets.SNYK_TOKEN != ''
+        if: secrets.SNYK_TOKEN != null && secrets.SNYK_TOKEN != ''
         uses: snyk/actions/node@14818c4695ecc4045f33c9cee9e795a788711ca4 # master
         continue-on-error: true
         env:
@@ -52,7 +52,7 @@ jobs:
           args: --sarif-file-output=./snyk.sarif
 
       - name: Upload Snyk results to GitHub Code Scanning
-        if: secrets.SNYK_TOKEN != '' && hashFiles('snyk.sarif') != ''
+        if: secrets.SNYK_TOKEN != null && secrets.SNYK_TOKEN != '' && hashFiles('snyk.sarif') != ''
         uses: github/codeql-action/upload-sarif@47b3d888fe66b639e431abf22ebca059152f1eea # v3
         with:
           sarif_file: ./snyk.sarif
