fix: use correct Snyk authentication method with token type
- Replace 'snyk config set api=' with 'snyk auth <token> --auth-type=token'
- Use proper PAT-based authentication as per Snyk CLI documentation
- Ensures compatibility with Snyk CLI version 1.1293+ authentication methods

--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -40,7 +40,7 @@ jobs:
         if: secrets.SNYK_TOKEN != null && secrets.SNYK_TOKEN != ''
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        run: snyk config set api=$SNYK_TOKEN
+        run: snyk auth $SNYK_TOKEN --auth-type=token
 
       - name: Run Snyk to check for vulnerabilities
         if: secrets.SNYK_TOKEN != null && secrets.SNYK_TOKEN != ''
