--- a/.github/workflows/snyk-example.yml
+++ b/.github/workflows/snyk-example.yml
@@ -1,20 +1,11 @@
-name: Snyk example
+name: Example workflow for Node using Snyk
 on: push
 jobs:
   security:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - uses: snyk/actions/setup@master
-        id: snyk
-        with:
-          snyk-version: v1.391.0
-      - uses: actions/setup-go@v1
-        with:
-          go-version: "1.13"
-      - name: Snyk version
-        run: echo "${{ steps.snyk.outputs.version }}"
-      - name: Snyk monitor
-        run: snyk monitor
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
