--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -25,15 +25,21 @@ jobs:
       - uses: snyk/actions/setup@master
         id: snyk
 
-      - name: Run Snyk to check for vulnerabilities
+      - name: Run Snyk auth
         uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: auth --auth-type=token
 
-      - name: Run Snyk to monitor vulnerabilities
+      - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+      - name: Run Snyk monitor
+        uses: snyk/actions/node@master
+        continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
@@ -49,6 +55,7 @@ jobs:
 
       - name: Upload Snyk results to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@47b3d888fe66b639e431abf22ebca059152f1eea # v3
+        continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
