--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -30,7 +30,7 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          command: auth --auth-type=token
+          command: auth ${{ secrets.SNYK_TOKEN }} --auth-type=token
 
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
