--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,10 +1,15 @@
-name: Example workflow for Node using Snyk
-on: push
+name: Snyk Security Scan
+on: [push, pull_request]
+
+permissions:
+  contents: read
+  security-events: write  # Kluczowe dla SARIF upload
+  actions: read
+
 jobs:
-  security:
+  snyk-scan:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
+
     steps:
       - name: Checkout code
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
@@ -24,12 +29,10 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           args: --sarif-file-output=snyk.sarif
+
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v3
+        if: always()
         with:
           sarif_file: snyk.sarif
 
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
