--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -22,6 +22,13 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
+      - name: Run Snyk monitor for vulnerabilities
+        uses: snyk/actions/node@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          command: monitor
+
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
         env:
