--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,5 +1,12 @@
 name: Snyk Security Scan
-on: [push, pull_request]
+
+on:
+  push:
+  pull_request:
+  workflow_call:
+    secrets:
+      SNYK_TOKEN:
+        required: true
 
 permissions:
   contents: read
