--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -10,7 +10,7 @@ on:
 
 permissions:
   contents: read
-  security-events: write  # Kluczowe dla SARIF upload
+  security-events: write
   actions: read
 
 jobs:
@@ -19,10 +19,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
+        uses: actions/checkout@v4
 
       - name: Setup Bun
-        uses: oven-sh/setup-bun@f4d14e03ff726c06358e5557344e1da148b56cf7 # v1
+        uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
 
@@ -30,14 +30,14 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: Run Snyk monitor for vulnerabilities
-        uses: snyk/actions/node@master
+        uses: snyk/actions/node@v1.0.0
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: monitor
 
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
+        uses: snyk/actions/node@v1.0.0
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
@@ -48,4 +48,3 @@ jobs:
         if: always()
         with:
           sarif_file: snyk.sarif
-
