--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -3,6 +3,10 @@ name: Snyk Security Scan
 on:
   push:
   pull_request:
+  workflow_call:
+    secrets:
+      SNYK_TOKEN:
+        required: true
 
 permissions:
   contents: read
