--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -30,14 +30,14 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: Run Snyk monitor for vulnerabilities
-        uses: snyk/actions/node@v1.0.0
+        uses: snyk/actions/node@14818c4695ecc4045f33c9cee9e795a788711ca4
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: monitor
 
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@v1.0.0
+        uses: snyk/actions/node@14818c4695ecc4045f33c9cee9e795a788711ca4
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
