fix(typescript): enable strict mode and improve type safety
- Enable strict mode in tsconfig.json for better type checking
- Add explicit typing to argv parameter in cli.ts
- Fix error handling with proper type narrowing in generate.ts
- Add comprehensive type definitions in types.ts
- Improve overall type safety across the codebase

These changes eliminate TypeScript compilation errors and provide
better development experience with enhanced type checking.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     ],
     "module": "commonjs",
     "moduleResolution": "node",
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": false,
@@ -20,7 +20,7 @@
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "outDir": "build",
-    "strict": false,
+    "strict": true,
     "target": "es5",
     "declaration": true,
     "declarationDir": "build/types",
