--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,15 +8,56 @@ on:
   push:
     tags:
       - 'v*.*.*'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to release (e.g., 1.2.3) - must match existing git tag'
+        required: true
+        type: string
 
 permissions:
   contents: write
 
 jobs:
+  validate-tag:
+    name: "🏷️ Validation: Verify Tag Exists"
+    # Validates that the specified version corresponds to an existing git tag
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    steps:
+      - name: "📥 Repository: Checkout Code"
+        uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
+        with:
+          fetch-depth: 0
+
+      - name: "🏷️ Validation: Check Tag Exists"
+        # Verifies that v${{ inputs.version }} tag exists in repository
+        run: |
+          VERSION="${{ github.event.inputs.version }}"
+          TAG_NAME="v${VERSION}"
+          
+          echo "🔍 Checking if tag ${TAG_NAME} exists..."
+          
+          if git tag -l | grep -q "^${TAG_NAME}$"; then
+            echo "✅ Tag ${TAG_NAME} exists"
+            echo "TAG_NAME=${TAG_NAME}" >> $GITHUB_ENV
+          else
+            echo "❌ Tag ${TAG_NAME} does not exist!"
+            echo "Available tags:"
+            git tag -l | tail -10
+            echo ""
+            echo "Please create the tag first:"
+            echo "  git tag ${TAG_NAME}"
+            echo "  git push origin ${TAG_NAME}"
+            exit 1
+          fi
+
   check-ci-status:
     name: "🔍 Pre-flight: CI Pipeline Verification"
     # Ensures CI pipeline passed successfully before allowing release
     runs-on: ubuntu-latest
+    needs: [validate-tag]
+    if: always() && (needs.validate-tag.result == 'success' || needs.validate-tag.result == 'skipped')
     steps:
       - name: "✅ Validation: Verify CI Success for Tag Commit"
         # Queries GitHub API to confirm CI workflow completed successfully for this commit
@@ -49,6 +90,7 @@ jobs:
     # Creates production build, archives, checksums, and GitHub release
     runs-on: ubuntu-latest
     needs: [check-ci-status]
+    if: always() && needs.check-ci-status.result == 'success'
     steps:
       - name: "📥 Repository: Full History Checkout"
         # Downloads complete git history for changelog and version extraction
@@ -58,7 +100,7 @@ jobs:
 
       - name: "⚡ Runtime: Setup Bun Environment"
         # Configures Bun runtime for fast dependency installation and building
-        uses: oven-sh/setup-bun@f4d14e03ff726c06358e5557344e1da148b56cf7 # v1
+        uses: oven-sh/setup-bun@735343b667d3e6f658f44d0eca948eb6282f2b76 # v2
         with:
           bun-version: latest
 
@@ -82,16 +124,25 @@ jobs:
         # Compiles TypeScript and creates production build artifacts
         run: bun run build
 
-      - name: "🏷️ Version: Extract & Validate from Git Tag"
-        # Extracts semantic version from git tag with security validation
+      - name: "🏷️ Version: Extract & Validate Version"
+        # Extracts semantic version from git tag or workflow input with security validation
         id: get_version
         run: |
-          VERSION="${GITHUB_REF/refs\/tags\/v/}"
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            VERSION="${{ github.event.inputs.version }}"
+            echo "Using manual input version: $VERSION"
+          else
+            VERSION="${GITHUB_REF/refs\/tags\/v/}"
+            echo "Using git tag version: $VERSION"
+          fi
+          
           # Validate version format to prevent injection
           if [[ ! "$VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+(-.+)?$ ]]; then
             echo "Error: Invalid version format: $VERSION"
             exit 1
           fi
+          
+          echo "✅ Valid version: $VERSION"
           echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
 
       - name: "📦 Archive: Create Release Packages"
@@ -173,7 +224,7 @@ jobs:
 
       - name: "⚡ Runtime: Setup Bun Environment"
         # Configures Bun runtime for build and testing
-        uses: oven-sh/setup-bun@f4d14e03ff726c06358e5557344e1da148b56cf7 # v1
+        uses: oven-sh/setup-bun@735343b667d3e6f658f44d0eca948eb6282f2b76 # v2
         with:
           bun-version: latest
 
@@ -247,7 +298,7 @@ jobs:
 
       - name: "⚡ Runtime: Setup Bun Environment"
         # Configures Bun for build and publishing
-        uses: oven-sh/setup-bun@f4d14e03ff726c06358e5557344e1da148b56cf7 # v1
+        uses: oven-sh/setup-bun@735343b667d3e6f658f44d0eca948eb6282f2b76 # v2
         with:
           bun-version: latest
 
