--- a/.github/workflows/comprehensive-security-audit.yml
+++ b/.github/workflows/comprehensive-security-audit.yml
@@ -9,6 +9,9 @@ on:
     # Run daily at 2 AM UTC
     - cron: '0 2 * * *'
   workflow_call:
+    secrets:
+      SNYK_TOKEN:
+        required: false
   workflow_dispatch:
 
 permissions:
