--- a/.github/workflows/issue-auto-tagger.yml
+++ b/.github/workflows/issue-auto-tagger.yml
@@ -128,30 +128,61 @@ jobs:
         with:
           script: |
             const result = JSON.parse('${{ steps.analyze.outputs.result }}');
-            const labels = result.labels;
+            const suggestedLabels = result.labels;
             
-            if (labels.length === 0) {
+            if (suggestedLabels.length === 0) {
               console.log('❌ No labels to apply');
               return;
             }
             
-            console.log(`🏷️ Applying ${labels.length} labels:`, labels);
+            console.log(`🏷️ Processing ${suggestedLabels.length} suggested labels:`, suggestedLabels);
             
             try {
-              await github.rest.issues.addLabels({
+              // Check which labels exist in the repository
+              const existingLabelsResponse = await github.rest.issues.listLabelsForRepo({
                 owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.issue.number,
-                labels: labels
+                repo: context.repo.repo
               });
               
-              console.log('✅ Labels applied successfully');
+              const existingLabelNames = existingLabelsResponse.data.map(label => label.name);
+              console.log(`📋 Repository has ${existingLabelNames.length} existing labels`);
               
-              // Add a comment explaining the auto-tagging
-              const labelList = labels.map(label => `- \`${label}\``).join('\n');
+              // Filter to only apply labels that exist
+              const validLabels = suggestedLabels.filter(label => existingLabelNames.includes(label));
+              const missingLabels = suggestedLabels.filter(label => !existingLabelNames.includes(label));
+              
+              console.log(`✅ Valid labels to apply (${validLabels.length}):`, validLabels);
+              if (missingLabels.length > 0) {
+                console.log(`⚠️  Missing labels that need to be created (${missingLabels.length}):`, missingLabels);
+              }
+              
+              // Apply only existing labels
+              if (validLabels.length > 0) {
+                await github.rest.issues.addLabels({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: context.issue.number,
+                  labels: validLabels
+                });
+                
+                console.log(`✅ Successfully applied ${validLabels.length} labels`);
+              } else {
+                console.log('⚠️ No valid labels to apply - all suggested labels are missing from repository');
+              }
+              
+              // Add a comment explaining the auto-tagging results
+              const appliedLabelsText = validLabels.length > 0 ? 
+                'This issue has been automatically analyzed and tagged with the following labels:\n' + 
+                validLabels.map(label => `- \`${label}\``).join('\n') : 
+                'This issue was analyzed but no existing labels matched the content.';
+              
+              const missingLabelsText = missingLabels.length > 0 ? 
+                '\n\n**Note**: The following labels were suggested but don\'t exist in this repository yet:\n' +
+                missingLabels.map(label => `- \`${label}\``).join('\n') + 
+                '\n\nMaintainers may want to create these labels for better issue organization.' : '';
+              
               const comment = '🤖 **Auto-Tagging Complete**\n\n' +
-                'This issue has been automatically analyzed and tagged with the following labels:\n' +
-                labelList + '\n\n' +
+                appliedLabelsText + missingLabelsText + '\n\n' +
                 'These labels help organize and prioritize issues. If any labels seem incorrect, maintainers can adjust them manually.\n\n' +
                 '---\n' +
                 '*This is an automated process. For questions about auto-tagging, please check the [workflow documentation](https://github.com/' +
