--- a/deno.json
+++ b/deno.json
@@ -5,8 +5,8 @@
     "strict": true
   },
   "imports": {
-    "@cliffy/command": "https://raw.githubusercontent.com/c4spar/deno-cliffy/v1.0.0-rc.4/command/mod.ts",
-    "@cliffy/table": "https://raw.githubusercontent.com/c4spar/deno-cliffy/v1.0.0-rc.4/table/mod.ts",
+    "@cliffy/command": "jsr:@cliffy/command@^1.0.0-rc.4",
+    "@cliffy/table": "jsr:@cliffy/table@^1.0.0-rc.4",
     "@std/path": "https://deno.land/std@0.224.0/path/mod.ts",
     "@std/fs": "https://deno.land/std@0.224.0/fs/mod.ts",
     "@std/testing/asserts": "https://deno.land/std@0.224.0/testing/asserts.ts"
